Fix page content jumping

--- a/static/style.css
+++ b/static/style.css
@@ -121,10 +121,11 @@ nav ul li a {
     padding-bottom: 1em;
     padding-left: 0;
     border-left: none;
+    border-bottom: 2px solid transparent;
   }
 
   nav ul li.active,
   nav ul li:hover {
-    border-bottom: 2px solid white;
+    border-bottom-color: white;
   }
 }
